logs/clad.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/clad'...
Compiling './lib/python3.5/site-packages/clad/clad.py'...
***   File "./lib/python3.5/site-packages/clad/clad.py", line 71
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clad/git.py'...
***   File "./lib/python3.5/site-packages/clad/git.py", line 31
    except sh.ErrorReturnCode, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clad/logs.py'...
***   File "./lib/python3.5/site-packages/clad/logs.py", line 18
    print self._get_red(msg)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clad/repos.py'...
***   File "./lib/python3.5/site-packages/clad/repos.py", line 94
    print 'Creating base repos dir: {0}'.format(REPO_BASE)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clad-0.3.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.12.14.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
